# slideshow_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: TECHNICAL.md
slideshow/: api.py  cli.py  render.py  scanner.py
