[project]
name = "photo-slideshow"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
photo-slideshow = "slideshow.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slideshow", "slideshow.*"]
